Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2  # You have 2 replicas defined
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 041738715000.dkr.ecr.us-east-2.amazonaws.com/simple-html:${IMAGE_TAG}
          ports:
            - containerPort: 80
